--- a/Tarea2/Servidor-Web/src/main/webapp/menu/consultaDeTiposDePaquetesDeOfertaLaboral.html
+++ b/Tarea2/Servidor-Web/src/main/webapp/menu/consultaDeTiposDePaquetesDeOfertaLaboral.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
-    <link rel="stylesheet" href="./css/index.css">
+    <link rel="stylesheet" href="../css/consultaDeTiposDePaquetesDeOfertaLaboral.css">
     <title>Trabajo.uy</title>
 </head>
 
@@ -15,7 +15,7 @@
     <header>
 
         <div class="header-left">
-            <a href="./index.html">
+            <a href="../index.html">
                 <aside class="logo">Trabajo<span>.uy</span></aside>
             </a>
         </div>
@@ -39,7 +39,6 @@
                     <button type="button" class="dropbtn" id="dropdown-button">Seleccionar Pagina </button>
                     <div class="dropdown-content">
                         <a href="../menu/compraPaquete.html" id="compraPaquete">Comprar Paquete</a>
-                        <a href="../menu/consultaUsuario.html" id="consultaUsuario">Consultar Usuario</a>
                         <a href="../menu/consultaDeTipoDePublicacionDeOfertaLaboral.html"
                             id="consultaDeTipoDePublicacionDeOfertaLaboral">Consultar tipo de
                             publicacion</a>
@@ -157,7 +156,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous">
         </script>
-    <script src="./js/dejarOpcionMarcada.js"></script>
+    <script src="../js/dejarOpcionMarcada.js"></script>
 </body>
 
 </html>
