Primer caso de uso terminado

--- a/Tarea2/Servidor-Web/src/main/webapp/menu/consultaDeTipoDePublicacionDeOfertaLaboral.html
+++ b/Tarea2/Servidor-Web/src/main/webapp/menu/consultaDeTipoDePublicacionDeOfertaLaboral.html
@@ -38,12 +38,13 @@
                     <h4> Menu </h4>
                     <button type="button" class="dropbtn" id="dropdown-button">Seleccionar Pagina </button>
                     <div class="dropdown-content">
-                        <a href="../menu/compraPaquete.html">Comprar Paquete</a>
-                        <a href="../menu/consultaUsuario.html">Consultar Usuario</a>
+                        <a href="../menu/compraPaquete.html" id="compraPaquete">Comprar Paquete</a>
+                        <a href="../menu/consultaUsuario.html" id="consultaUsuario">Consultar Usuario</a>
                         <a href="../menu/consultaDeTipoDePublicacionDeOfertaLaboral.html"
                             id="consultaDeTipoDePublicacionDeOfertaLaboral">Consultar tipo de
                             publicacion</a>
-                        <a href="../menu/consultaDeTiposDePaquetesDeOfertaLaboral.html">Consultar tipo de paquetes</a>
+                        <a href="../menu/consultaDePaqueteDeTiposDePublicacionDeOfertaLaborl.html"
+                            id="consultaDePaqueteDeTiposDePublicacionDeOfertaLaborl">Consultar tipo de paquetes</a>
                     </div>
                 </div>
             </section>
