--- a/Tarea2/Servidor-Web/src/main/webapp/recourse/menu/consultaDePaqueteDeTiposDePublicacionDeOfertaLaborl.html
+++ b/Tarea2/Servidor-Web/src/main/webapp/recourse/menu/consultaDePaqueteDeTiposDePublicacionDeOfertaLaborl.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
-    <link rel="stylesheet" href="../recourse/css/consultaDePaqueteDeTiposDePublicacionDeOfertaLaborl.css">
+    <link rel="stylesheet" href="../css/consultaDePaqueteDeTiposDePublicacionDeOfertaLaborl.css">
+    <link rel="stylesheet" href="../css/general.css">
     <title>Trabajo.uy</title>
 </head>
 
@@ -23,7 +24,7 @@
             <button class="btn btn-secondary">Buscar</button>
         </div>
         <div class="header-right">
-            <a href="../recourse/menu/miPerfilEmpresa.html">Perfil</a>
+            <a href="../menu/miPerfilEmpresa.html">Perfil</a>
         </div>
 
     </header>
@@ -35,11 +36,15 @@
                     <h4> Menu </h4>
                     <button type="button" class="dropbtn" id="dropdown-button">Seleccionar Pagina </button>
                     <div class="dropdown-content">
-                        <a class="opcionMenu" href="../recourse/menu/compraPaquete.html" id="compraPaquete">Comprar Paquete</a>
-                        <a class="opcionMenu" href="../recourse/menu/consultaDeTipoDePublicacionDeOfertaLaboral.html"
+                        <a class="opcionDropMenu" href="../menu/compraPaquete.html" id="compraPaquete">Comprar
+                            Paquete</a>
+                        <a class="opcionDropMenu" href="../menu/consultaUsuario.html" id="consultaUsuario">Consultar
+                            Usuario</a>
+                        <a class="opcionDropMenu" href="../menu/consultaDeTipoDePublicacionDeOfertaLaboral.html"
                             id="consultaDeTipoDePublicacionDeOfertaLaboral">Consultar tipo de
                             publicacion</a>
-                        <a class="opcionMenu" href="../recourse/menu/consultaDePaqueteDeTiposDePublicacionDeOfertaLaborl.html"
+                        <a class="opcionDropMenu"
+                            href="../menu/consultaDePaqueteDeTiposDePublicacionDeOfertaLaborl.html"
                             id="consultaDePaqueteDeTiposDePublicacionDeOfertaLaborl">Consultar tipo de paquetes</a>
                     </div>
                 </div>
