--- a/Tarea2/Servidor-Web/src/main/webapp/index.html
+++ b/Tarea2/Servidor-Web/src/main/webapp/index.html
@@ -6,55 +6,118 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
-    <link rel="stylesheet" href="./recourse/css/index.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+        integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <!--Para poder usar font-awesome-->
+    <link rel="stylesheet" href="./css/estilos.css">
     <title>Trabajo.uy</title>
 </head>
 
 <body>
     <!-- El cuerpo del body por lo general esta compuesto de tres etiquetas: header(portada), main, footer(pie de página, dónde por lo general van los contactos, redes sociales, etc)-->
     <header>
+        <aside class="logo">Trabajo<span>.uy</span></aside>
+        <form class="d-flex">
+            <input id="inputBuscar" class="form-control me-2" type="text" placeholder="Buscar producto">
+            <button id="btnBuscar" class="btn btn-light" type="button"><i
+                    class="fa-solid fa-magnifying-glass fa-lg"></i></button>
+        </form>
+        <nav class="portada">
+            <ul class="menuRegistro">
+                <li><a href="./index.html">Inicio</a></li>
+                <li>
+                    <!-- -->
 
-        <div class="header-left">
-            <a href="./index.html">
-                <aside class="logo">Trabajo<span>.uy</span></aside>
-            </a>
-        </div>
-        <div class="header-center">
-            <input type="text" placeholder="Buscar" class="textfieldBuscar">
-            <button class="btn btn-secondary">Buscar</button>
-        </div>
-        <div class="header-right">
-            <a href="./recourse/menu/miPerfilEmpresa.html">Perfil</a>
-        </div>
-
+                </li>
+                <li><a href="./menu/inicioSession.html">Acceder</a></li>
+            </ul>
+        </nav>
     </header>
 
     <main class="home">
         <!-- El cuerpo main del home va a contener dos secciones(section). A la izquierda una tabla(table) con las keywords. Y a la derecha varios contenedores(div) uno debajo del otro que contienen la imagen(img) y descripción(p) de las ofertas laborales.
         El cuerpo de la tabla(tbody) contiene botones para que después al hacer click filtre por lo que corresponda -->
-        <div class="mainLeft">
-            <section class="menu">
-                <div class="dropdown">
-                    <h4> Menu </h4>
-                    <button type="button" class="dropbtn" id="dropdown-button">Seleccionar Pagina </button>
-                    <div class="dropdown-content">
-                        <a href="./recourse/menu/compraPaquete.html" id="compraPaquete">Comprar Paquete</a>
-                        <a href="./recourse/menu/consultaUsuario.html" id="consultaUsuario">Consultar Usuario</a>
-                        <a href="./recourse/menu/consultaDeTipoDePublicacionDeOfertaLaboral.html"
-                            id="consultaDeTipoDePublicacionDeOfertaLaboral">Consultar tipo de
-                            publicacion</a>
-                        <a href="./recourse/menu/consultaDePaqueteDeTiposDePublicacionDeOfertaLaborl.html"
-                            id="consultaDePaqueteDeTiposDePublicacionDeOfertaLaborl">Consultar tipo de paquetes</a>
-                    </div>
-                </div>
-            </section>
-
-            <section class="keywords">
+        <div class="keywords">
+            <section class="menuPerfil">
                 <div class="table-responsive">
                     <table class="table table-hover table-bordered">
                         <thead class="table-primary">
                             <tr>
-                                <th>Keywords</th>
+                                <th>Menú</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <td>
+                                    <div class="dropdown">
+                                        <button type="button" class="botonUsuarios btn dropdown-toggle"
+                                            data-bs-toggle="dropdown">
+                                            Usuarios
+                                        </button>
+                                        <ul class="dropdown-menu overflow-auto listaUsuarios">
+                                            <li><a class="dropdown-item nombresUsuarios"
+                                                    href="./menu/consultarMiPerfilEmpresa.html">EcoTech</a></li>
+                                            <li><a class="dropdown-item nombresUsuarios"
+                                                    href="./menu/consultarMiPerfilEmpresa.html">lgarcia</a></li>
+                                            <li><a class="dropdown-item nombresUsuarios"
+                                                    href="./menu/consultarMiPerfilEmpresa.html">valen25</a></li>
+                                            <li><a class="dropdown-item nombresUsuarios"
+                                                    href="./menu/consultarMiPerfilEmpresa.html">sicam</a></li>
+                                            <li><a class="dropdown-item nombresUsuarios"
+                                                    href="./menu/consultarMiPerfilEmpresa.html">matilo</a></li>
+                                            <li><a class="dropdown-item nombresUsuarios"
+                                                    href="./menu/consultarMiPerfilEmpresa.html">maro</a></li>
+                                            <li><a class="dropdown-item nombresUsuarios"
+                                                    href="./menu/consultarMiPerfilEmpresa.html">javierf</a></li>
+                                            <li><a class="dropdown-item nombresUsuarios"
+                                                    href="./menu/consultarMiPerfilEmpresa.html">FusionTech</a></li>
+                                            <li><a class="dropdown-item nombresUsuarios"
+                                                    href="./menu/consultarMiPerfilEmpresa.html">GlobalHealth</a></li>
+                                            <li><a class="dropdown-item nombresUsuarios"
+                                                    href="./menu/consultarMiPerfilEmpresa.html">ANTEL</a></li>
+                                            <li><a class="dropdown-item nombresUsuarios"
+                                                    href="./menu/consultarMiPerfilEmpresa.html">andepe12</a></li>
+                                            <li><a class="dropdown-item nombresUsuarios"
+                                                    href="./menu/consultarMiPerfilEmpresa.html">MIEM</a></li>
+                                            <li><a class="dropdown-item nombresUsuarios"
+                                                    href="./menu/consultarMiPerfilEmpresa.html">sebgon</a></li>
+                                            <li><a class="dropdown-item nombresUsuarios"
+                                                    href="./menu/consultarMiPerfilEmpresa.html">isabel</a></li>
+                                            <li><a class="dropdown-item nombresUsuarios"
+                                                    href="./menu/consultarMiPerfilEmpresa.html">TechSolutions</a></li>
+                                        </ul>
+                                    </div>
+                                </td>
+                            </tr>
+                            <tr>
+                                <td>
+                                    <div class="dropdown">
+                                        <button type="button" class="botonUsuarios btn dropdown-toggle"
+                                            data-bs-toggle="dropdown">
+                                            Consultas
+                                        </button>
+                                        <ul class="dropdown-menu overflow-auto listaConsultas">
+                                            <li><a class="dropdown-item nombresUsuarios"
+                                                    href="./consultarMiPerfilEmpresa.html">Tipos de publicaciones</a></li>
+                                            <li><a class="dropdown-item nombresUsuarios"
+                                                    href="./consultarMiPerfilEmpresa.html">Tipos de paquetes</a></li>
+                                            <li><a class="dropdown-item nombresUsuarios"
+                                                    href="./consultarMiPerfilEmpresa.html">Tipos de ofertas laborales</a></li>
+                                        </ul>
+                                    </div>
+                                </td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
+            </section>
+            <section class="">
+                <div class="tablaKeyword table-responsive overflow-auto">
+                    <table class="table table-hover table-bordered">
+                        <thead class="table-primary">
+                            <tr>
+                                <th class="cabezaTabla">Keywords</th>
                             </tr>
                         </thead>
                         <tbody>
@@ -95,53 +158,52 @@
         </div>
         <section class="ofertaslaborales">
             <div class="oferta oferta1">
-                <img class="imgOfertas" src="./recourse/img/ofertaDesarrolloFrontend.jpg" alt="Oferta Desarrollo Frontend">
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolor eveniet fugit sit eaque magni
-                    enim a
+                <img class="imgOfertas" src="./img/ofertaDesarrolloFrontend.jpg" alt="Oferta Desarrollo Frontend">
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolor eveniet fugit sit eaque magni enim a
                     explicabo voluptate doloremque, similique inventore placeat accusantium maiores autem ipsam iste
                     voluptas facilis repellendus?
                     <br><br>
-                    <a href="./recourse/menu/ofertaLaboral.html">Mas Info</a>
+                    <a href="./menu/consultaOfertaLaboral.html">Mas Info</a>
                 </p>
             </div>
             <div class="oferta oferta1">
-                <img class="imgOfertas" src="./recourse/img/ofertaDesarrolloFrontend.jpg" alt="Oferta Desarrollo Frontend">
+                <img class="imgOfertas" src="./img/ofertaDesarrolloFrontend.jpg" alt="Oferta Desarrollo Frontend">
                 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Alias delectus et ea enim sapiente
                     recusandae cum eveniet non iure sit neque odit debitis, numquam modi rerum quaerat soluta
                     perspiciatis autem. <br><br>
-                    <a href="./recourse/menu/consultaOfertaLaboral.html">Mas Info</a>
+                    <a href="./menu/consultaOfertaLaboral.html">Mas Info</a>
                 </p>
             </div>
             <div class="oferta oferta1">
-                <img class="imgOfertas" src="./recourse/img/ofertaDesarrolloFrontend.jpg" alt="Oferta Desarrollo Frontend">
+                <img class="imgOfertas" src="./img/ofertaDesarrolloFrontend.jpg" alt="Oferta Desarrollo Frontend">
                 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Alias delectus et ea enim sapiente
                     recusandae cum eveniet non iure sit neque odit debitis, numquam modi rerum quaerat soluta
                     perspiciatis autem. <br><br>
-                    <a href="./recourse/menu/consultaOfertaLaboral.html">Mas Info</a>
+                    <a href="./menu/consultaOfertaLaboral.html">Mas Info</a>
                 </p>
             </div>
             <div class="oferta oferta1">
-                <img class="imgOfertas" src="./recourse/img/ofertaDesarrolloFrontend.jpg" alt="Oferta Desarrollo Frontend">
+                <img class="imgOfertas" src="./img/ofertaDesarrolloFrontend.jpg" alt="Oferta Desarrollo Frontend">
                 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Alias delectus et ea enim sapiente
                     recusandae cum eveniet non iure sit neque odit debitis, numquam modi rerum quaerat soluta
                     perspiciatis autem. <br><br>
-                    <a href="./recourse/menu/consultaOfertaLaboral.html">Mas Info</a>
+                    <a href="./menu/consultaOfertaLaboral.html">Mas Info</a>
                 </p>
             </div>
             <div class="oferta oferta1">
-                <img class="imgOfertas" src="./recourse/img/ofertaDesarrolloFrontend.jpg" alt="Oferta Desarrollo Frontend">
+                <img class="imgOfertas" src="./img/ofertaDesarrolloFrontend.jpg" alt="Oferta Desarrollo Frontend">
                 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Alias delectus et ea enim sapiente
                     recusandae cum eveniet non iure sit neque odit debitis, numquam modi rerum quaerat soluta
                     perspiciatis autem. <br><br>
-                    <a href="./recourse/menu/consultaOfertaLaboral.html">Mas Info</a>
+                    <a href="./menu/consultaOfertaLaboral.html">Mas Info</a>
                 </p>
             </div>
             <div class="oferta oferta1">
-                <img class="imgOfertas" src="./recourse/img/ofertaDesarrolloFrontend.jpg" alt="Oferta Desarrollo Frontend">
+                <img class="imgOfertas" src="./img/ofertaDesarrolloFrontend.jpg" alt="Oferta Desarrollo Frontend">
                 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Alias delectus et ea enim sapiente
                     recusandae cum eveniet non iure sit neque odit debitis, numquam modi rerum quaerat soluta
                     perspiciatis autem. <br><br>
-                    <a href="./recourse/menu/consultaOfertaLaboral.html">Mas Info</a>
+                    <a href="./menu/consultaOfertaLaboral.html">Mas Info</a>
                 </p>
             </div>
         </section>
@@ -156,8 +218,7 @@
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous">
-        </script>
-    <script src="./js/dejarOpcionMarcada.js"></script>
+    </script>
 </body>
 
 </html>
