--- a/Tarea2/Servidor-Web/src/main/webapp/recourse/menu/altaUsuario.html
+++ b/Tarea2/Servidor-Web/src/main/webapp/recourse/menu/altaUsuario.html
@@ -1,1 +1,100 @@
+<!DOCTYPE html>
+<html lang="es">
 
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">  <!--Instalación bootstrap-->
+    <link rel="stylesheet" href="../css/estilos.css"> <!--Link archivo css-->
+    <title>Alta Usuario</title>
+</head>
+
+<body>
+    <header>
+        <aside class="logo">Trabajo<span>.uy</span></aside>
+        <nav class="portada">
+            <ul class="menuRegistro">
+                <li><a href="../index.html">Inicio</a></li>
+                <li><a href="">Usuarios</a></li>
+            </ul>
+        </nav>
+    </header>
+    <main class="login">
+        <form class="formLogin" id="formAltaUsuario" action="./consultarMiPerfilEmpresa.html">
+            <div class="row camposForm">
+                <div class="col">
+                    <label class="form-label">*Nombre</label>
+                    <input  type="text" class="form-control" placeholder="Ingrese su nombre">
+                </div>
+                <div class="col">
+                    <label for="inputCity" class="form-label">*Apellido</label>
+                    <input type="text" class="form-control nom" placeholder="Ingrese su apellido">
+                </div>
+            </div>
+            <div class="col-md-6 camposForm" >
+                <label for="inputNickname" class="form-label">*Nickname</label>
+                <input type="text" class="form-control" id="inputNickname" placeholder="Ingrese su nickname">
+            </div>
+            <div class="col-md-6 camposForm">
+                <label for="inputEmail4" class="form-label">*Email</label>
+                <input type="email" class="form-control" id="inputEmail" placeholder="Ingrese su email">
+            </div>
+            <div class="col-md-6 camposForm">
+                <label for="inputPassword4" class="form-label">*Contraseña</label>
+                <input type="password" class="form-control" id="inputPassword" placeholder="Ingrese su contraseña">
+            </div>
+            <div class="col-md-6 camposForm">
+                <label for="inputPassword4" class="form-label">*Confirmar contraseña</label>
+                <input type="password" class="form-control" id="inputPasswordConfirm" placeholder="Ingrese su contraseña">
+            </div>
+            <div class="col-md-6 camposForm">
+                <label for="inputImgage" class="form-label">Foto de perfil</label>
+                <input type="file" name="imagen1" >
+            </div>
+            <div class="row camposForm">
+                <div class="col"><label for="inputTipoUsuario" class="form-label">*Tipo de usuario</label></div>
+                <div class="col">
+                    <div class="form-check">
+                        <input type="radio" class="form-check-input" id="radioPostulante" name="optradio"
+                            value="option1">Postulante
+                        <label class="form-check-label" for="radio1"></label>
+                    </div>
+                    <div class="form-check">
+                        <input type="radio" class="form-check-input" id="radioEmpresa" name="optradio" value="option2">Empresa
+                        <label class="form-check-label" for="radio2"></label>
+                    </div>
+                </div>
+
+            </div>
+            <div class="col-md-6 camposForm" id="divNacionalidad">
+                <label class="form-label">*Nacionalidad</label>
+                <input type="text" class="form-control" placeholder="Ingrese su nacionalidad">
+            </div>
+            <div class="col-md-6 camposForm" id="divFechaNacimiento" >
+                <label class="form-label">*Fecha de Nacimiento</label>
+                <input type="date" class="form-control" required>
+            </div>
+            <div class="col-md-6 camposForm" id="divSitioWeb">
+                <label class="form-label">Sitio Web</label>
+                <input type="text" class="form-control" placeholder="Ingrese su sitio web">
+            </div>
+            <div class="col-md-6 camposForm" id="divDescripcionEmpresa">
+                <label class="form-label">*Descripción</label>
+                <input type="text" class="form-control" placeholder="Ingrese una descripción">
+            </div>
+            <div class="col-6 camposForm" id="radioTipoUsuario">
+                <button id="btnRegistrarUsuario" type="submit" class="btn btn-primary">Registrarse</button>
+            </div>
+        </form>
+
+    </main>
+
+
+    <script src="../js/app.js"></script> <!--link archivo js-->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous">
+    </script> <!--Instalación bootstrap-->
+</body>
+
+</html>
