--- a/Tarea2/Servidor-Web/src/main/webapp/index.html
+++ b/Tarea2/Servidor-Web/src/main/webapp/index.html
@@ -34,22 +34,20 @@
         <div class="mainLeft">
             <section class="menu">
                 <div class="dropdown">
-                    <h4> Menu </h4>
-                    <button type="button" class="dropbtn" id="dropdown-button">Seleccionar Pagina </button>
-                    <div class="dropdown-content">
-                        <a class="opcionDropMenu" href="../recourse/menu/compraPaquete.html" id="compraPaquete">Comprar
-                            Paquete</a>
-                        <a class="opcionDropMenu" href="../recourse/menu/consultaUsuario.html"
-                            id="consultaUsuario">Consultar
-                            Usuario</a>
-                        <a class="opcionDropMenu"
-                            href="../recourse/menu/consultaDeTipoDePublicacionDeOfertaLaboral.html"
-                            id="consultaDeTipoDePublicacionDeOfertaLaboral">Consultar tipo de
-                            publicacion</a>
-                        <a class="opcionDropMenu"
-                            href="../recourse/menu/consultaDePaqueteDeTiposDePublicacionDeOfertaLaborl.html"
-                            id="consultaDePaqueteDeTiposDePublicacionDeOfertaLaborl">Consultar tipo de paquetes</a>
-                    </div>
+                    <h5> Menu </h4>
+                    <a class="btn btn-secondary dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                        Seleccionar Pagina
+                    </a>
+                  
+                    <ul class="dropdown-menu">
+                      <li><a class="dropdown-item" href="../webapp/recourse/menu/consultaUsuario.html" id="consultaUsuario">Consultar
+                        Usuario</a></li>
+                      <li><a class="dropdown-item" href="../webapp/recourse/menu/consultaDePaqueteDeTiposDePublicacionDeOfertaLaborl.html"
+                        id="consultaDeTipoDePublicacionDeOfertaLaboral">Consultar tipo de
+                        publicacion</a></li>
+                        <li><a class="dropdown-item" href="../webapp/recourse/menu/consultaDePaqueteDeTiposDePublicacionDeOfertaLaborl.html"
+                            id="consultaDePaqueteDeTiposDePublicacionDeOfertaLaborl">Consultar tipo de paquetes</a></li>
+                    </ul>
                 </div>
             </section>
 
