--- a/Tarea2/Servidor-Web/src/main/webapp/recourse/menu/altaOferta.html
+++ b/Tarea2/Servidor-Web/src/main/webapp/recourse/menu/altaOferta.html
@@ -7,7 +7,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
     <!--Instalación bootstrap-->
-    <link rel="stylesheet" href="../css/estilos.css"> <!--Link archivo css-->
+    <link rel="stylesheet" href="../css/index.css"> <!--Link archivo css-->
     <title>Alta Ofertas</title>
 </head>
 
